# Construction-Safety-Monitor

./: README.md  app.py  data.yaml  main.py  pyproject.toml  requirements.txt
notebooks/: Test_Model.ipynb
scripts/: check_inference.py
src/constant/: __init__.py
src/core/: inference.py
src/entity/: inference_entity.py
src/utils/: core_utils.py  images_utils.py  live_utils.py  process_utils.py  videos_utils.py
