[project]
name = "construction-safety-monitor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "gradio>=4.0.0",
    "matplotlib>=3.7.0",
    "numpy>=1.24.0",
    "opencv-python>=4.8.0",
    "pandas>=2.0.0",
    "pillow>=10.0.0",
    "pyyaml>=6.0.0",
    "roboflow>=1.1.0",
    "seaborn>=0.12.0",
    "split-folders>=0.5.1",
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "tqdm>=4.65.0",
    "ultralytics>=8.0.0",
]
